opam-version: "2.0"
maintainer: "mirageos-devel"
authors: ["David Kaloper Meršinjak <david@numm.org>"]
homepage: "https://github.com/mirage/mirage-os-shim"
doc: "https://mirage.github.io/mirage-os-shim/doc"
license: "ISC"
dev-repo: "git+https://github.com/mirage/mirage-os-shim.git"
bug-reports: "https://github.com/mirage/mirage-os-shim/issues"
tags: []
build: [
  ["dune" "subst" ] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build & >= "1.7"}
  "ocaml" {>= "4.04.0"}
  "lwt"
  "mirage-unix"{with-test}
]
synopsis: "Portable shim for MirageOS OS API"
description: """
mirage-os-shim is the common interface between mirageOS backends. It's a dune
virtual library implemented by `mirage-xen`, `mirage-unix` and
`mirage-freestanding`.
"""
